IGNITE-843 Fixed checkbox align for detailed rows.

--- a/modules/control-center-web/src/main/js/public/stylesheets/style.scss
+++ b/modules/control-center-web/src/main/js/public/stylesheets/style.scss
@@ -399,7 +399,7 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     .checkbox label {
-        line-height: 20px;
+        line-height: 20px !important;
         vertical-align: middle;
     }
 }
